--major css update that fixes gaps on side of screen, inproved scrolling

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,15 @@
-
+html {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
 body {
     background-image:url("background.png");
     padding: 0;
     overflow: auto;
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
 .name {
     margin-left: 5%;
@@ -32,15 +39,14 @@ header {
 .navbar {
     display: flex;
     justify-content: space-between;
-    padding: 10px;
     background: #ffffff;
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
-    height: 5%;
+    height: 10%;
     top: 0%;
     left: 50%;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
     
 section {
@@ -62,7 +68,7 @@ section {
 footer {
    
     padding: 10px 10px;
-    margin: 10px;
+    margin-top: 20px;
     font-size: 16px;
     text-align: center;
     color: #777777 ;
@@ -172,6 +178,9 @@ input {
     margin-left: 2%;
     padding: 40px;
 }
+.navbar {
+    height: 15%;
+}
  section {
     width: 90%;
     margin-left: 2%;
@@ -201,13 +210,13 @@ input {
     width: 100%;
     flex-direction: column;
     height: 7%;
-    padding-bottom: 20px;
+    padding-bottom: 60px;
     }
     .name {
     width: 100%;
     left: 0%;
     margin-left: 0%;
-
+    height: 10%;
     
     }
     .about{
@@ -224,6 +233,8 @@ input {
     flex-direction: column;
     width: 100%;
     text-align: center;
+    margin: 0px;
+
     }
     .banner {
         width: 400px;
@@ -231,13 +242,13 @@ input {
     }
     .dalton {
     height: 400px;
-    width: 85%;
+    width: 100%;
     float: none;
 
    
     }
     p {
-    margin: 20%;
+   
     margin-top: 10px;
     }
     .grey {
@@ -247,8 +258,12 @@ input {
     }
     .links 
     {
-        padding: 5px;
+        width: 100%;
+        height: 10%;
         margin-left: 0%;
+        background: #ffffff;
+        padding: 20px;
+        
     }
     #subject {
         height: 150px;
